# smartimagesearch

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITFLOW.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: model_config.example.yaml  scan_paths.example.yaml  search_config.example.yaml
